--- a/sanitymediumbuild/package.json
+++ b/sanitymediumbuild/package.json
@@ -20,6 +20,7 @@
     "@sanity/default-login": "^2.27.0",
     "@sanity/desk-tool": "^2.27.3",
     "@sanity/eslint-config-studio": "^2.0.0",
+    "@sanity/image-url": "^1.0.1",
     "@sanity/vision": "^2.27.2",
     "eslint": "^8.6.0",
     "next-sanity": "^0.5.1",
